# python-webrtc-demo-app

./: .gitignore  README.md
client/: client.html
server/: .env.example  pyproject.toml  server.py
server/schema/: README.md  package-lock.json  package.json  schema.ts  tsconfig.json
