[project]
name = "python-webrtc-demo-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.0.1",
    "typing-extensions>=4.12.2",
    "websockets>=13.0.1",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.4",
]
